# plsautomate-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/decisions/: 001-file-forwarding-in-process-chains.md  002-connector-params-propagation-in-process-chains.md
fixtures/: plsautomate.config.yaml
src/plsautomate_runtime/: auth.py  executor.py  file_info.py  files.py  observability.py  scheduler.py  server.py  types.py  ui.py
src/plsautomate_runtime/actions/: __init__.py  base.py  runner.py
src/plsautomate_runtime/actions/builtins/: __init__.py  email_forward.py  email_send.py  file_save_output.py  gdrive_upload.py
src/plsautomate_runtime/connectors/: __init__.py  exchange.py  gmail.py  slack.py
src/yesautomate_runtime/: __init__.py  __main__.py  auth.py  condition.py  config.py  db.py  executor.py  files.py  observability.py  pipeline.py  server.py  storage.py  types.py  ui.py
src/yesautomate_runtime/actions/: __init__.py  base.py  runner.py
src/yesautomate_runtime/actions/builtins/: __init__.py  email_forward.py  email_mark_read.py  email_move.py  email_reply.py  email_send.py  file_save_output.py  gdrive_upload.py  process_call.py  sharepoint_upload.py  webhook_post.py
src/yesautomate_runtime/connectors/: __init__.py  base.py  exchange.py  gmail.py  slack.py  webhook.py
tests/: conftest.py  test_config.py  test_connectors.py  test_db.py  test_executor.py  test_file_info.py  test_files.py  test_langfuse.py  test_multipart.py  test_pipeline.py  test_reviews.py  test_server.py  test_ui.py
tests/testfiles/: README.md  VBAK.xlsx  VBAP.xlsx  generate.py
